[package]
name = "ecosystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.85"
axum = "0.7.5"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full", "tracing"] }
tracing = "0.1"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-opentelemetry = "0.23.0"
opentelemetry = { version =  "0.23.0" , features = ["trace"] }
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.16.0", features = ["tonic"] }
derive_builder = "0.20.0"
chrono = { version = "0.4.38", features = ["serde"] }
derive_more = "0.99.17"
strum = { version = "0.26.2", features = ["derive"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
base64 = "0.22.1"
serde_with = "3.8.1"
bytes = "1.6.0"
dashmap = "5.5.3"
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.11", features = ["codec"] }
futures = "0.3.30"
console-subscriber = "0.2.0"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "tls-rustls"] }

[build]
rustflags = ["--cfg", "tokio_unstable"]
